--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,11 @@
     <title>Hello Django</title>
 </head>
 <body>
-    <h1>{{ header }}</h1>
-    <p>Name: {{ user.name}} Age: {{user.age}}</p>
-    <p>Address: ул. {{address.0}}, д. {{address.1}}, кв. {{address.2}}</p>
-    <p>Langs: {{langs.0}}, {{langs.1}}</p>
+<ul>
+    <li><a href=""> Home</a></li>
+    <li><a href="users/show"> Show all users</a></li>
+    <li><a href="search-form"> Searching users</a></li>
+    <li><a href="init-user"> Edit new user</a></li>
+</ul>
 </body>
 </html>
