--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Search-result</title>
+    <base href="http://127.0.0.1:8000/" target="_self">
 </head>
 <body>
+<ul>
+    <li><a href=""> Home</a></li>
+    <li><a href="users/show"> Show all users</a></li>
+    <li><a href="search-form"> Searching users</a></li>
+    <li><a href="init-user"> Edit new user</a></li>
+</ul>
 <p>You searched for: <strong>{{ query }}</strong></p>
 
 {% if users %}
