--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -14,10 +14,14 @@
 </ul>
     <form action="/search/" method="get">
         <p> Type of search ONE/MANY/ALL:
-        <input type="text" name="type" >
+            <label>
+                <input type="text" name="type" >
+            </label>
         </p>
         <p> Query of search:
-            <input type="text" name="q">
+            <label>
+                <input type="text" name="q">
+            </label>
         </p>
         <input type="submit" value="Search">
     </form>
