--- a/templates/deleted_user.html
+++ b/templates/deleted_user.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Search-result</title>
+    <title>Inited-user</title>
     <base href="http://127.0.0.1:8000/" target="_self">
 </head>
 <body>
@@ -13,18 +13,14 @@
     <li><a href="init-user"> Edit new user</a></li>
     <li><a href="delete-init"> Delete user</a></li>
 </ul>
-<p>You searched for: <strong>{{ query }}</strong></p>
-
-{% if users %}
-    <p>Found user(s)</p>
-    {% for user in users %}
-    <ul>
-        <li>id: {{ user.0 }}</li> <li>Name: {{ user.1 }}</li> <li>Age: {{ user.2 }}</li>
-    </ul>
-    {% endfor %}
+{% if type %}
+<p>You delited user:</p>
+<ul>
+    <li>id: {{ user.id }}</li>
+    <li>Name: {{ user.Name }}</li>
+    <li>Age: {{ user.Age }}</li>
+</ul>
 
 {% else %}
-    <p>There are no such users</p>
+<p>There is no such user:</p>
 {% endif %}
-</body>
-</html>
