--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <li><a href="users/show"> Show all users</a></li>
     <li><a href="search-form"> Searching users</a></li>
     <li><a href="init-user"> Edit new user</a></li>
+    <li><a href="delete-init"> Delete user</a></li>
 </ul>
 </body>
 </html>
