--- a/templates/init_user.html
+++ b/templates/init_user.html
@@ -11,6 +11,7 @@
     <li><a href="users/show"> Show all users</a></li>
     <li><a href="search-form"> Searching users</a></li>
     <li><a href="init-user"> Edit new user</a></li>
+    <li><a href="delete-init"> Delete user</a></li>
 </ul>
     <form action="/inited/" method="post"> {% csrf_token %}
         <p> Name:<label>
