--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -11,6 +11,7 @@
     <li><a href="users/show"> Show all users</a></li>
     <li><a href="search-form"> Searching users</a></li>
     <li><a href="init-user"> Edit new user</a></li>
+    <li><a href="delete-init"> Delete user</a></li>
 </ul>
 <p>You searched for: <strong>{{ query }}</strong></p>
 
