--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -12,6 +12,8 @@
     <li><a href="search-form"> Searching users</a></li>
     <li><a href="init-user"> Edit new user</a></li>
     <li><a href="delete-init"> Delete user</a></li>
+    <li><a href="send_message"> Send message</a></li>
+    <li><a href="init_show_messages"> Show message</a></li>
 </ul>
 <p>You searched for: <strong>{{ query }}</strong></p>
 
