--- a/templates/init_show_messages.html
+++ b/templates/init_show_messages.html
@@ -18,12 +18,12 @@
     <form action="/show_messages/" method="get">
         <p> Show messages to (id):
             <label>
-                <input type="text" name="idhost" >
+                <input type="number" name="idhost" >
             </label>
         </p>
         <p> From (id):
             <label>
-                <input type="text" name="idfriend">
+                <input type="number" name="idfriend">
             </label>
         </p>
         <input type="submit" value="Show">
