--- a/templates/init_user.html
+++ b/templates/init_user.html
@@ -20,8 +20,8 @@
             <input type="text" name="Name">
         </label>
         </p>
-        <p> Age:<label>
-            <input type="number" name="Age">
+        <p> Password:<label>
+            <input type="text" name="Password">
         </label>
         </p>
         <input type="submit" value="Init">
